@@ -1,6 +1,6 @@
 Package: crs
 Version: 0.15-8
-Date: 2011-11-13
+Date: 2011-11-16
 Depends:
 Suggests: np, rgl, quadprog, quantreg
 Title: Categorical Regression Splines
